--- a/templates/county.html
+++ b/templates/county.html
@@ -115,17 +115,16 @@
          				<div id="map" align="center"></div>
 						
 					</div>
-					
-					<script type="text/javascript" src="../static/js/config.js"></script>
-      
-    					<script type="text/javascript" src="../static/js/houstonmap.js"></script>
 
 				</div>
 
 			</div>
+			
+		</section>
 		
 		<!-- Table
 		============================================= -->
+		<section id="table1">
 
 			<div class="content-wrap">
 
@@ -619,7 +618,6 @@
 			</div>
 
 		</section><!-- #content end -->
-
 
 		<!-- Footer
 		============================================= -->
