--- a/templates/about.html
+++ b/templates/about.html
@@ -97,13 +97,16 @@
 			<div class="content-wrap">
 
 				<div class="container clearfix">
-					<p>
-						About <br>
+					
+					<div class="col_half">
+						<h5>Project</h5>
+						The project came about in talks with the Houston Flood Control District to have a more efficient way of identifying new home listings per their buyout program. The main issue they discovered was their lack of resources and inefficiencies in their search of new and upcoming listings. This created a time management issue as there were not enough people to sort through the thousands of listings that also include false positives and true negatives. It also prevented them from keeping consistent track of existing listings within their parameters.
+					</div>
 
-						The project came about in talks with the Houston Flood Control District to have a more efficient way of identifying new home listings per their buyout program. The main issue they discovered was their lack of resources and inefficiencies in their search of new and upcoming listings. This created a time management issue as there were not enough people to sort through the thousands of listings that also include false positives and true negatives. It also prevented them from keeping consistent track of existing listings within their parameters. <br>
-
-
-					</p>
+					<div class="col_half col_last">
+						<h5>Developers</h5>
+						The project came about in talks with the Houston Flood Control District to have a more efficient way of identifying new home listings per their buyout program. The main issue they discovered was their lack of resources and inefficiencies in their search of new and upcoming listings. This created a time management issue as there were not enough people to sort through the thousands of listings that also include false positives and true negatives. It also prevented them from keeping consistent track of existing listings within their parameters.
+					</div>
 
 				</div>
 
