--- a/templates/index.html
+++ b/templates/index.html
@@ -227,7 +227,7 @@ body {
 								data-actions=''
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":2000,"frame":"0","from":"x:-50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#000000","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":500,"frame":"999","bgcolor":"#000000","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:-50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#ffffff","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#ffffff","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
 								data-textAlign="['center','center','center','inherit']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[50,50,20,20]"
@@ -251,7 +251,7 @@ body {
 								data-actions=''
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":2000,"frame":"0","from":"x:50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#000000","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":500,"frame":"999","bgcolor":"#000000","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#ffffff","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#ffffff","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
 								data-textAlign="['center','center','center','inherit']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[50,50,20,20]"
@@ -351,7 +351,7 @@ body {
 								data-actions=''
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":2000,"frame":"0","from":"x:-50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#000000","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":500,"frame":"999","bgcolor":"#000000","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:-50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#ffffff","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#ffffff","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
 								data-textAlign="['center','center','center','inherit']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[50,50,20,20]"
@@ -375,7 +375,7 @@ body {
 								data-actions=''
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":2000,"frame":"0","from":"x:50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#000000","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":500,"frame":"999","bgcolor":"#000000","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#ffffff","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#ffffff","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
 								data-textAlign="['center','center','center','inherit']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[50,50,20,20]"
@@ -475,7 +475,7 @@ body {
 								data-actions=''
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":2000,"frame":"0","from":"x:-50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#000000","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":500,"frame":"999","bgcolor":"#000000","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:-50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#ffffff","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#ffffff","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
 								data-textAlign="['center','center','center','inherit']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[50,50,20,20]"
@@ -499,7 +499,7 @@ body {
 								data-actions=''
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":2000,"frame":"0","from":"x:50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#000000","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":500,"frame":"999","bgcolor":"#000000","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#ffffff","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#ffffff","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
 								data-textAlign="['center','center','center','inherit']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[50,50,20,20]"
