--- a/templates/index.html
+++ b/templates/index.html
@@ -162,7 +162,7 @@ body {
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 5;font-family:Open Sans;background:linear-gradient(180deg, rgba(0,0,35,0.20) 0%, rgba(0,0,80,0.20) 100%);"></div>
+								style="z-index: 5;font-family:Open Sans;background-blend-mode: multiply;background:linear-gradient(180deg, rgba(0,0,255,0.60) 0%, rgba(0,0,255,0.60) 100%);"></div>
 
 							<!-- LAYER NR. 2 -->
 							<div class="tp-caption  "
