--- a/templates/index.html
+++ b/templates/index.html
@@ -210,7 +210,7 @@ o
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: rgba(255,255,255,0.75); letter-spacing: px;font-family:Montserrat;">Testing Right Now</div>
+								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: rgba(255,255,255,0.75); letter-spacing: px;font-family:Montserrat;">New &nbsp;Property &nbsp;Listings</div>
 
 							<!-- LAYER NR. 4 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
@@ -286,7 +286,7 @@ o
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 5;font-family:Open Sans;background:linear-gradient(180deg, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%);"> </div>
+								style="z-index: 5;font-family:Open Sans;background-blend-mode: multiply;background:linear-gradient(180deg, rgba(128,0,128,0.25) 0%, rgba(128,0,128,0.65) 100%);"></div>
 
 							<!-- LAYER NR. 7 -->
 							<div class="tp-caption  "
@@ -334,7 +334,7 @@ o
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: rgba(255,255,255,0.75); letter-spacing: px;font-family:Montserrat;"></div>
+								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: rgba(255,255,255,0.75); letter-spacing: px;font-family:Montserrat;">Real-Time  &nbsp;Data</div>
 
 							<!-- LAYER NR. 9 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
@@ -410,7 +410,7 @@ o
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 5;font-family:Open Sans;background:linear-gradient(180deg, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%);"> </div>
+								style="z-index: 5;font-family:Open Sans;background-blend-mode: multiply;background:linear-gradient(180deg, rgba(0,255,0,0.25) 0%, rgba(0,255,0,0.65) 100%);"></div>
 
 							<!-- LAYER NR. 12 -->
 							<div class="tp-caption  "
@@ -458,7 +458,7 @@ o
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: rgba(255,255,255,0.75); letter-spacing: px;font-family:Montserrat;"></div>
+								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: rgba(255,255,255,0.75); letter-spacing: px;font-family:Montserrat;">Email  &nbsp;Communications</div>
 
 							<!-- LAYER NR. 14 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
