--- a/templates/index.html
+++ b/templates/index.html
@@ -203,14 +203,14 @@ o
 								data-type="text"
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":2000,"frame":"0","from":"z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;","color":"#000000","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":500,"frame":"999","color":"#000000","to":"opacity:0;","ease":"nothing"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;","color":"#000000","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","color":"#000000","to":"opacity:0;","ease":"nothing"}]'
 								data-textAlign="['center','center','center','center']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[0,0,0,0]"
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: rgba(255,255,255,0.75); letter-spacing: px;font-family:Montserrat;">New &nbsp;Property &nbsp;Listings</div>
+								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: #ffffff; letter-spacing: px;font-family:Montserrat;">New &nbsp;Property &nbsp;Listings</div>
 
 							<!-- LAYER NR. 4 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
@@ -234,7 +234,7 @@ o
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[50,50,20,20]"
 
-								style="z-index: 8; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cube" style="font-size:17px;margin-right:5px;"></i> Harris &nbsp;County </a>
+								style="z-index: 8; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,115,160);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cube" style="font-size:17px;margin-right:5px;"></i> Harris &nbsp;County </a>
 
 							<!-- LAYER NR. 5 -->
 							<a class="tp-caption rev-btn   tc-btnshadow"
@@ -258,7 +258,7 @@ o
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[50,50,20,20]"
 							   
-								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Neighborhoods </a>
+								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,115,160);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Neighborhoods </a>
 						</li>
 						<!-- SLIDE  -->
 						<li class="dark" data-index="rs-244" data-transition="slidehorizontal" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="{{ url_for('static', filename='images/buyout.jpg') }}"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
@@ -327,14 +327,14 @@ o
 								data-type="text"
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":2000,"frame":"0","from":"z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;","color":"#000000","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":500,"frame":"999","color":"#000000","to":"opacity:0;","ease":"nothing"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;","color":"#000000","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","color":"#000000","to":"opacity:0;","ease":"nothing"}]'
 								data-textAlign="['center','center','center','center']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[0,0,0,0]"
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: rgba(255,255,255,0.75); letter-spacing: px;font-family:Montserrat;">Real-Time  &nbsp;Data</div>
+								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: #ffffff; letter-spacing: px;font-family:Montserrat;">Real-Time  &nbsp;Data</div>
 
 							<!-- LAYER NR. 9 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
@@ -410,7 +410,7 @@ o
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 5;font-family:Open Sans;background-blend-mode: multiply;background:linear-gradient(180deg, rgba(0,255,0,0.25) 0%, rgba(0,255,0,0.65) 100%);"></div>
+								style="z-index: 5;font-family:Open Sans;background-blend-mode: multiply;background:linear-gradient(180deg, rgba(0,127,0,0.25) 0%, rgba(0,127,0,0.65) 100%);"></div>
 
 							<!-- LAYER NR. 12 -->
 							<div class="tp-caption  "
@@ -451,14 +451,14 @@ o
 								data-type="text"
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":2000,"frame":"0","from":"z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;","color":"#000000","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","color":"#000000","to":"opacity:0;","ease":"nothing"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;","color":"#000000","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","color":"#000000","to":"opacity:0;","ease":"nothing"}]'
 								data-textAlign="['center','center','center','center']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[0,0,0,0]"
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: rgba(255,255,255,0.75); letter-spacing: px;font-family:Montserrat;">Email  &nbsp;Communications</div>
+								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: #ffffff; letter-spacing: px;font-family:Montserrat;">Email  &nbsp;Communications</div>
 
 							<!-- LAYER NR. 14 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
