--- a/templates/index.html
+++ b/templates/index.html
@@ -133,7 +133,7 @@ body {
 		============================================= -->
 		<section id="slider" class="slider-element revslider-wrap full-screen clearfix">
 
-			<div id="welcome_wrapper" class="rev_slider_wrapper fullscreen-container" data-alias="reveal-add-on39" data-source="gallery" style="background:#ffffff;padding:0px;">
+			<div id="welcome_wrapper" class="rev_slider_wrapper fullscreen-container" data-alias="reveal-add-on39" data-source="gallery" style="background:#fdfdfd;padding:0px;">
 				<!-- START SLIDER 5.4.6 fullscreen mode -->
 				<div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.6">
 					<ul>	<!-- SLIDE  -->
@@ -210,7 +210,7 @@ o
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: #ffffff; letter-spacing: px;font-family:Montserrat;">New &nbsp;Property &nbsp;Listings</div>
+								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: #fdfdfd; letter-spacing: px;font-family:Montserrat;">New &nbsp;Property &nbsp;Listings</div>
 
 							<!-- LAYER NR. 4 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
@@ -227,7 +227,7 @@ o
 								data-actions=''
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:-50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#ffffff","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#ffffff","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:-50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#fdfdfd","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#fdfdfd","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
 								data-textAlign="['center','center','center','inherit']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[50,50,20,20]"
@@ -251,7 +251,7 @@ o
 								data-actions=''
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#ffffff","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#ffffff","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#fdfdfd","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#fdfdfd","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
 								data-textAlign="['center','center','center','inherit']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[50,50,20,20]"
@@ -334,7 +334,7 @@ o
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: #ffffff; letter-spacing: px;font-family:Montserrat;">Real-Time  &nbsp;Data</div>
+								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: #fdfdfd; letter-spacing: px;font-family:Montserrat;">Real-Time  &nbsp;Data</div>
 
 							<!-- LAYER NR. 9 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
@@ -351,7 +351,7 @@ o
 								data-actions=''
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:-50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#ffffff","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#ffffff","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:-50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#fdfdfd","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#fdfdfd","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
 								data-textAlign="['center','center','center','inherit']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[50,50,20,20]"
@@ -375,7 +375,7 @@ o
 								data-actions=''
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#ffffff","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#ffffff","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#fdfdfd","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#fdfdfd","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
 								data-textAlign="['center','center','center','inherit']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[50,50,20,20]"
@@ -410,7 +410,7 @@ o
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 5;font-family:Open Sans;background-blend-mode: multiply;background:linear-gradient(180deg, rgba(0,127,0,0.15) 0%, rgba(0,127,0,0.45) 100%);"></div>
+								style="z-index: 5;font-family:Open Sans;background-blend-mode: multiply;background:linear-gradient(180deg, rgba(0,127,0,0.25) 0%, rgba(0,127,0,0.55) 100%);"></div>
 
 							<!-- LAYER NR. 12 -->
 							<div class="tp-caption  "
@@ -458,7 +458,7 @@ o
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: #ffffff; letter-spacing: px;font-family:Montserrat;">Email  &nbsp;Communications</div>
+								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: #fdfdfd; letter-spacing: px;font-family:Montserrat;">Email  &nbsp;Communications</div>
 
 							<!-- LAYER NR. 14 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
@@ -475,7 +475,7 @@ o
 								data-actions=''
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:-50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#ffffff","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#ffffff","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:-50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#fdfdfd","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#fdfdfd","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
 								data-textAlign="['center','center','center','inherit']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[50,50,20,20]"
@@ -499,7 +499,7 @@ o
 								data-actions=''
 								data-responsive_offset="off"
 								data-responsive="off"
-								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#ffffff","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#ffffff","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
+								data-frames='[{"delay":900,"speed":1000,"frame":"0","from":"x:50px;z:0;rX:0;rY:0;rZ:0;sX:1.1;sY:1.1;skX:0;skY:0;opacity:0;fbr:100;","bgcolor":"#fdfdfd","to":"o:1;fbr:100;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","bgcolor":"#fdfdfd","to":"opacity:0;fbr:100;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;fbr:90%;","style":"c:rgba(255,255,255,1);"}]'
 								data-textAlign="['center','center','center','inherit']"
 								data-paddingtop="[0,0,0,0]"
 								data-paddingright="[50,50,20,20]"
@@ -585,14 +585,14 @@ o
 					delay:9000,
 					particles: {startSlide: "first", endSlide: "last", zIndex: "1",
 						particles: {
-							number: {value: 25}, color: {value: "#ffffff"},
+							number: {value: 25}, color: {value: "#fdfdfd"},
 							shape: {
-								type: "circle", stroke: {width: 0, color: "#ffffff", opacity: 1},
+								type: "circle", stroke: {width: 0, color: "#fdfdfd", opacity: 1},
 								image: {src: ""}
 							},
 							opacity: {value: 1, random: true, min: 0.25, anim: {enable: true, speed: 3, opacity_min: 0, sync: false}},
 							size: {value: 2, random: true, min: 0.5, anim: {enable: true, speed: 5, size_min: 1, sync: false}},
-							line_linked: {enable: false, distance: 150, color: "#ffffff", opacity: 0.4, width: 1},
+							line_linked: {enable: false, distance: 150, color: "#fdfdfd", opacity: 0.4, width: 1},
 							move: {enable: true, speed: 2, direction: "none", random: true, min_speed: 1, straight: false, out_mode: "out"}},
 						    interactivity: {
 							events: {onhover: {enable: false, mode: "bubble"}, onclick: {enable: false, mode: "repulse"}},
@@ -601,7 +601,7 @@ o
 					},
 					revealer: {
 						direction: "open_horizontal",
-						color: "#ffffff",
+						color: "#fdfdfd",
 						duration: "1500",
 						delay: "0",
 						easing: "Power2.easeInOut",
@@ -709,12 +709,12 @@ o
 					overlay_delay: "0",
 					overlay_easing: "Power2.easeInOut",
 					spinner: "3",
-					spinnerColor: "#ffffff",
+					spinnerColor: "#fdfdfd",
 					spinnerHTML: "<div class='rsaddon-revealer-spinner rsaddon-revealer-spinner-3'><div class='rsaddon-revealer-3'><span style='background:{{color}}'><\/span><span style='background:{{color}}'><\/span><span style='background:{{color}}'><\/span><span style='background:{{color}}'><\/span><\/div><\/div>"
 				},
 				itm_4: {
 					direction: "split_right_corner",
-					color: "#ffffff",
+					color: "#fdfdfd",
 					duration: "1500",
 					delay: "0",
 					easing: "Power2.easeInOut",
@@ -729,7 +729,7 @@ o
 				},
 				itm_5: {
 					direction: "shrink_circle",
-					color: "#ffffff",
+					color: "#fdfdfd",
 					duration: "1500",
 					delay: "0",
 					easing: "Power2.easeOut",
@@ -754,12 +754,12 @@ o
 					overlay_delay: "0",
 					overlay_easing: "Power2.easeInOut",
 					spinner: "6",
-					spinnerColor: "#ffffff",
+					spinnerColor: "#fdfdfd",
 					spinnerHTML: "<div class='rsaddon-revealer-spinner rsaddon-revealer-spinner-6'><div class='rsaddon-revealer-6'><span style='background:{{color}}'><\/span><span style='background:{{color}}'><\/span><span style='background:{{color}}'><\/span><span style='background:{{color}}'><\/span><span style='background:{{color}}'><\/span><span style='background:{{color}}'><\/span><span style='background:{{color}}'><\/span><span style='background:{{color}}'><\/span><span style='background:{{color}}'><\/span><\/div><\/div>"
 				},
 				itm_7: {
 					direction: "left_to_right",
-					color: "#ffffff",
+					color: "#fdfdfd",
 					duration: "1500",
 					delay: "0",
 					easing: "Power2.easeInOut",
@@ -774,7 +774,7 @@ o
 				},
 				itm_8: {
 					direction: "right_to_left",
-					color: "#ffffff",
+					color: "#fdfdfd",
 					duration: "1500",
 					delay: "0",
 					easing: "Power2.easeInOut",
@@ -789,7 +789,7 @@ o
 				},
 				itm_9: {
 					direction: "top_to_bottom",
-					color: "#ffffff",
+					color: "#fdfdfd",
 					duration: "1500",
 					delay: "0",
 					easing: "Power2.easeInOut",
@@ -809,12 +809,12 @@ o
 					delay: "0",
 					easing: "Power2.easeInOut",
 					overlay_enabled: true,
-					overlay_color: "#ffffff",
+					overlay_color: "#fdfdfd",
 					overlay_duration: "2500",
 					overlay_delay: "0",
 					overlay_easing: "Power2.easeInOut",
 					spinner: "10",
-					spinnerColor: "#ffffff",
+					spinnerColor: "#fdfdfd",
 					spinnerHTML: "<div class='rsaddon-revealer-spinner rsaddon-revealer-spinner-10'><div class='rsaddon-revealer-10'><span style='background:{{color}}'><\/span><span style='background:{{color}}'><\/span><\/div><\/div>"
 				},
 				itm_11: {
@@ -849,7 +849,7 @@ o
 				},
 				itm_13: {
 					direction: "bltr_skew",
-					color: "#ffffff",
+					color: "#fdfdfd",
 					duration: "1500",
 					delay: "0",
 					easing: "Power2.easeInOut",
