testing county map

--- a/templates/county.html
+++ b/templates/county.html
@@ -105,27 +105,58 @@
 		<!-- Content
 		============================================= -->
 		<section id="content">
+<div class="content-wrap">
+<div class="container clearfix">
+<div class="col_half">
+<h3>Left-Aligned Google Map</h3>
+<div class="alignleft gmap" id="google-map1" style="width: 280px; height: 170px;"></div>
+<p>Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus.Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Nulla vitae elit libero, a pharetra augue.</p>
+<p>Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus.Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
+</div>
+<div class="col_half col_last">
+<h3>Right-Aligned Google Map</h3>
+<div class="alignright gmap" id="google-map2" style="width: 280px; height: 170px;"></div>
+<p>Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus.Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Nulla vitae elit libero, a pharetra augue.</p>
+<p>Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus.Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
+</div>
+<div class="line"></div>
+<h3>Full Width Google Map with Multiple Markers</h3>
+<div id="google-map4" style="height: 250px; margin-bottom: 20px;" class="gmap"></div>
+<p class="nobottommargin">Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus.Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Nulla vitae elit libero, a pharetra augue.</p>
+</script>
+<div class="line"></div>
+</div>
+<div class="container clearfix">
+<h3>100% Full Width Google Map</h3>
+</div>
+<div id="google-map5" style="height: 400px; margin-bottom: 20px;" class="gmap"></div>
+<div class="container clearfix">
+<p class="nobottommargin">Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus.Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Nulla vitae elit libero, a pharetra augue.</p>
+</div>
+<div class="container clearfix">
+<div class="line"></div>
+<h3>Auto Location &amp; Location Selector using Form Input</h3>
+<div class="col_one_third nobottommargin">
+<div class="input-group input-group-lg">
+<div class="input-group-prepend">
+<div class="input-group-text"><i class="icon-map-marker"></i></div>
+</div>
+<input type="text" id="location-input" name="location-input" class="form-control" placeholder="Search for Location...">
+<div class="input-group-append">
+<button class="btn btn-secondary" id="location-submit" type="submit"><i class="icon-line-search"></i></button>
+</div>
+</div>
+<p id="location-coordinates" style="display: none; margin-top: 10px;">
+<small id="latitude-text"><em>Latitude:</em></small> &middot; <small id="longitude-text"><em>Longitude:</em></small>
+</p>
+</div>
+<div class="col_two_third nobottommargin col_last">
+<div id="google-map-custom" class="gmap" style="height: 400px;"></div>
+</div>
+</div>
+</div>
+</section>
 
-			<div class="content-wrap">
-
-				<div id="google-map5" style="height: 400px; margin-bottom: 20px;" class="gmap"></div>
-
-				<div class="container clearfix">
-
-				</div>
-
-					
-					<!--
-					<div id="map-container" position="center">  
-						
-         				<div id="map" align="center"></div>
-						
-					</div>
-					-->
-
-				</div>
-			
-		</section>
 		
 		<!-- Table
 		============================================= -->
