testing county map

--- a/templates/county.html
+++ b/templates/county.html
@@ -105,16 +105,10 @@
 		<!-- Content
 		============================================= -->
 		<section id="content">
-			<div class="content-wrap">
-				<div class="container clearfix">
-					<h3>100% Full Width Google Map</h3>
-				</div>
-			</div>
-				<div id="google-map5" style="height: 400px; margin-bottom: 20px;" class="gmap"></d>
-			</div>
+				<div class="container clearfix"></div>
+				<div id="google-map5" style="height: 400px; margin-bottom: 20px;" class="gmap"></div>
 		</section>
 
-		
 		<!-- Table
 		============================================= -->
 		<!--
