--- a/templates/county.html
+++ b/templates/county.html
@@ -105,8 +105,21 @@
 		<!-- Content
 		============================================= -->
 		<section id="content">
-				<div class="container clearfix"></div>
-				<div id="google-map5" style="height: 400px; margin-bottom: 20px;" class="gmap"></div>
+			
+			<div class="container clearfix"></div>
+			
+			<!--
+			<div id="google-map5" style="height: 400px; margin-bottom: 20px;" class="gmap"></div>
+			-->
+			
+			<div id="google-map5" style="height: 400px; margin-bottom: 20px;" class="gmap"></div>
+			
+			<div id="map-container" position="center">  
+						
+         		<div id="map" align="center"></div>
+						
+			</div>
+			
 		</section>
 
 		<!-- Table
