testing county map

--- a/templates/countyTEST1.html
+++ b/templates/countyTEST1.html
@@ -114,7 +114,11 @@
 			
 			<div id="map" style="height: 400px; margin-bottom: 20px;" class="gmap"></div>
 			
-			<div id="map-container" position="center"></div>
+			<div id="map-container" position="center">  
+						
+         		<div id="map" align="center"></div>
+						
+			</div>
 			
 		</section>
 
