testing county map

--- a/templates/county.html
+++ b/templates/county.html
@@ -104,7 +104,7 @@
 
 		<!-- Content
 		============================================= -->
-		<section id="content">
+		<section>
 			
 			<div class="container clearfix"></div>
 			
