testing county maps

--- a/templates/county.html
+++ b/templates/county.html
@@ -112,7 +112,7 @@
 			<div id="google-map5" style="height: 400px; margin-bottom: 20px;" class="gmap"></div>
 			-->
 			
-			<div id="map" style="height: 400px; margin-bottom: 20px;" class="gmap"></div>
+			<div id="map" style="height: 500px;" class="gmap"></div>
 			
 		</section>
 
