--- a/static/css/style-houstonBU.css
+++ b/static/css/style-houstonBU.css
@@ -10,7 +10,7 @@ html {
 } */
 
 
-body {
+/*body {
     padding: 0;
     margin: 0;
   }
@@ -21,11 +21,27 @@ body {
     width: 800px;
   }
 
-  #map {
-    position: relative;
-	width: 100%;
-	height: 500px;
+  .h1 {
+    left: 25%;
   }
+
+  #map {
+    left: 25%;
+      /* position: relative; */
+/*
+    height: inherit;
+    width: inherit;
+  }
+/*
+
+-----------------------------------------------------------------*/
+
+
+#google-map {
+	position: relative;
+	width: 100%;
+	height: 450px;
+}
 
 .gmap img { max-width: none !important; }
 
