--- a/static/css/style-houston.css
+++ b/static/css/style-houston.css
@@ -15,33 +15,7 @@ body {
     margin: 0;
   }
 
-  #map-container {
-    position: relative;
-    height: 500px;
-    width: 800px;
-  }
-
   #map {
-    position: relative;
-	width: 100%;
-	height: 500px;
+    height: inherit;
+    width: inherit;
   }
-
-.gmap img { max-width: none !important; }
-
-.gm-style .gm-style-iw h3 span {
-	font-size: inherit;
-	font-family: inherit;
-}
-
-#map-overlay {
-	position: relative;
-	padding: 100px 0;
-}
-
-#map-overlay #google-map {
-	position: absolute;
-	height: 100%;
-	top: 0;
-	left: 0;
-}
