--- a/static/css/style-houston.css
+++ b/static/css/style-houston.css
@@ -1,21 +1,11 @@
-/* body {
-  padding: 0;
-  margin: 0;
-}
-
-#map,
-body,
-html {
-  height: 100%;
-} */
-
-
 body {
     padding: 0;
     margin: 0;
   }
 
   #map {
+    /* position: relative; */
+
     height: inherit;
     width: inherit;
   }
