--- a/templates/countyTEST2.html
+++ b/templates/countyTEST2.html
@@ -105,24 +105,6 @@
 		<!-- Content
 		============================================= -->
 		<section>
-
-				<div class="container clearfix">
-					
-					<div id="map-container" position="center">  
-						
-         				<div id="map"</div>
-						
-					</div>
-
-				</div>
-			
-		</section>
-		
-		
-		
-		
-		<!--
-		<section>
 			
 			<div class="container clearfix"></div>
 			
@@ -130,10 +112,9 @@
 			<div id="google-map5" style="height: 400px; margin-bottom: 20px;" class="gmap"></div>
 			-->
 			
-			<!--<div id="map" style="height: 500px;" class="gmap"></div>
+			<div id="map" style="height: 500px;" class="gmap"></div>
 			
 		</section>
-		-->
 
 		<!-- Table
 		============================================= -->
