--- a/static/css/style-houston.css
+++ b/static/css/style-houston.css
@@ -4,8 +4,7 @@ body {
   }
 
   #map {
-    /* position: relative; */
-
-    height: inherit;
-    width: inherit;
+    position: relative;
+	width: 100%;
+	height: 500px;
   }
