--- a/templates/county.html
+++ b/templates/county.html
@@ -106,7 +106,15 @@
 		============================================= -->
 		<section>
 						
-         				<div id="map"</div>
+         		<div class="content-wrap">
+
+				<div class="container clearfix">
+					
+					<div id="map" position="center"></div>
+
+				</div>
+
+			</div>
 			
 		</section>
 		
