Updated Tableau spacing

--- a/templates/analyticsBUGOOD.html
+++ b/templates/analyticsBUGOOD.html
@@ -94,9 +94,9 @@
 		============================================= -->
 		<section id="content">
 
-			<!--<div class="content-wrap">
+			<div class="content-wrap">
 
-				<div class="container clearfix"> -->
+				<div class="container clearfix">
 					
 				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1200 height=2135 style="text-align: center"></iframe></p>
 				
@@ -109,9 +109,9 @@
 				<p align="center"><iframe src="//county-flood-control.herokuapp.com/charts" width=1200 height=2135 style="text-align: center"></iframe></p>
 				-->	
 				
-				<!-- </div>
+				</div>
 
-			</div> -->
+			</div>
 
 		</section><!-- #content end -->
 
