Organized templates folder

--- a/templates/neighborhoods.html
+++ b/templates/neighborhoods.html
@@ -36,7 +36,7 @@
 	
 	<!-- Document Title
 	============================================= -->
-	<title>Harris County Listings</title>
+	<title>Neighborhood Listings</title>
 
 </head>
 
@@ -71,8 +71,8 @@
 						
 						<ul>
 							<li><a href="/"><div>Home</div></a></li>
-							<li><a href="#"><div>County</div></a></li>
-							<li><a href="neighborhoods"><div>Neighborhoods</div></a></li>
+							<li><a href="county"><div>County</div></a></li>
+							<li><a href="#"><div>Neighborhoods</div></a></li>
 							<li><a href="faqs"><div>FAQs</div></a></li>
 						</ul>
 
@@ -105,12 +105,9 @@
 		<!-- Content
 		============================================= -->
 		<section>
-
-				<div class="container clearfix">
 					
 					<div id="map" position="center"></div>
 
-				</div>
 			
 		</section>
 		
