--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -24,7 +24,7 @@
 	
 	<!-- Document Title
 	============================================= -->
-	<title>About</title>
+	<title>Analytics</title>
 
 </head>
 
