--- a/templates/contact.html
+++ b/templates/contact.html
@@ -24,7 +24,7 @@
 	
 	<!-- Document Title
 	============================================= -->
-	<title>About</title>
+	<title>Contact</title>
 
 </head>
 
