--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -92,13 +92,14 @@
 		
 		<!-- Page Sub Menu
 		============================================= -->
+		<!--
 		<div id="page-menu">
 
 			<div id="page-menu-wrap">
 
 				<div class="container clearfix">
 
-					<div class="menu-title">ANALYTICS</span></div>
+					<div class="menu-title"></span></div>
 
 					<nav>
 						<ul>
@@ -115,9 +116,6 @@
 			</div>
 
 		</div><!-- #page-menu end -->
-
-		<!-- Content
-		============================================= -->
 
 		<!-- Content
 		============================================= -->
