--- a/templates/analyticsSubMenu.html
+++ b/templates/analyticsSubMenu.html
@@ -89,6 +89,33 @@
 			</div>
 
 		</section><!-- #page-title end -->
+		
+		<!-- Page Sub Menu
+		============================================= -->
+		<!--
+		<div id="page-menu">
+
+			<div id="page-menu-wrap">
+
+				<div class="container clearfix">
+
+					<div class="menu-title"></span></div>
+
+					<nav>
+						<ul>
+							<li class="current"><a href="#"><div>Dashboard</div></a></li>
+							<li><a href="#"><div>Predictive</div></a></li>
+							<li><a href="#"><div>Models</div></a></li>
+						</ul>
+					</nav>
+
+					<div id="page-submenu-trigger"><i class="icon-reorder"></i></div>
+
+				</div>
+
+			</div>
+
+		</div><!-- #page-menu end -->
 
 		<!-- Content
 		============================================= -->
@@ -98,7 +125,7 @@
 
 				<div class="container clearfix"> -->
 					
-				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1200 height=2135 style="text-align: center"></iframe></p>
+				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=100% height=100% style="text-align: center"></iframe></p>
 				
 				<!--
 				<div class=‘tableauPlaceholder’ id=‘viz1556232940664’ style=‘position: relative’><noscript><a href=‘#’><img alt=' ' src=‘https://public.tableau.com&#47;static&#47;images&#47;BT&#47;BT85D6ZMB&#47;1_rss.png’ style=‘border: none’ /></a></noscript><object class=‘tableauViz’  style=‘display:none;’><param name=‘host_url’ value=‘https//public.tableau.com%2F’ /> <param name=‘embed_code_version’ value=‘3’ /> <param name=‘path’ value=‘shared&#47;BT85D6ZMB’ /> <param name=‘toolbar’ value=‘yes’ /><param name=‘static_image’ value=‘https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;BT&#47;BT85D6ZMB&#47;1.png’ /> <param name=‘animate_transition’ value=‘yes’ /><param name=‘display_static_image’ value=‘yes’ /><param name=‘display_spinner’ value=‘yes’ /><param name=‘display_overlay’ value=‘yes’ /><param name=‘display_count’ value=‘yes’ /></object></div>                <script type=‘text/javascript’>                    var divElement = document.getElementById(‘viz1556232940664’);                    var vizElement = divElement.getElementsByTagName(‘object’)[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width=‘1000px’;vizElement.style.height=‘827px’;} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width=‘1000px’;vizElement.style.height=‘827px’;} else { vizElement.style.width=’100%’;vizElement.style.height=‘1077px’;}                     var scriptElement = document.createElement(‘script’);                    scriptElement.src = ’https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
