Updated analytics sub-menu

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -102,9 +102,8 @@
 
 					<nav>
 						<ul>
-							<li class="current"><a href="#"><div>Gallery</div></a></li>
-							<li><a href="#"><div>Dashboard</div></a></li>
-							<li><a href="#"><div>Predictive</div></a></li>
+							<li class="current"><a href="#"><div>DASHBOARD</div></a></li>
+							<li><a href="#"><div>PREDICTIVE</div></a></li>
 						</ul>
 					</nav>
 
