Updated analytics sub-menu

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -98,11 +98,11 @@
 
 				<div class="container clearfix">
 
-					<div class="menu-title"><span>DATA</span>ANALYTICS</div>
+					<div class="menu-title"><span>DATA </span>ANALYTICS</div>
 
-					<nav>
+					<nav class="one-page-menu">
 						<ul>
-							<li><a href="#" data-href="section-dashboard"><div>DASHBOARD</div></a></li>
+							<li><a href="active" data-href="section-dashboard"><div>DASHBOARD</div></a></li>
 							<li><a href="#" data-href="section-predictive"><div>PREDICTIVE</div></a></li>
 						</ul>
 					</nav>
