Revised analytics sub-menu

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -103,7 +103,7 @@
 					<nav class="one-page-menu">
 						<ul>
 							<li><a href="active" data-href="section-dashboard"><div>DASHBOARD</div></a></li>
-							<li><a href="predictive" data-href="section-predictive"><div>PREDICTIVE</div></a></li>
+							<li><a href="predictive"><div>PREDICTIVE</div></a></li>
 						</ul>
 					</nav>
 
