Added story page

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -129,18 +129,11 @@
 			<div id="section-dashboard" class="page-section"></div>
 						
 			<div class="heading-block topmargin noborder">
-				<h2 class="center">PREDICTIVE</h2>
+				<h2 class="center">DASHBOARD</h2>
 			</div>
 					
 				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
 				
-			<div id="section-predictive" class="page-section"></div>
-						
-			<div class="heading-block topmargin noborder">
-				<h2 class="center">PREDICTIVE</h2>
-			</div>
-					
-				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
 				<!-- </div>
 
 			</div> -->
