--- a/templates/story.html
+++ b/templates/story.html
@@ -127,7 +127,7 @@
 			<div id="section-dashboard" class="page-section"></div>
 						
 			<div class="heading-block topmargin noborder">
-				<h2 class="center">DASHBOARD</h2>
+				<h2 class="center">STORY</h2>
 			</div>
 					
 				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
