--- a/templates/forecasting.html
+++ b/templates/forecasting.html
@@ -65,7 +65,7 @@
 						</ul>
 
 						<ul>
-							<li><a href="#"><div>Analytics</div></a></li>
+							<li><a href="analytics"><div>Analytics</div></a></li>
 							<li><a href="alerts"><div>Alerts</div></a></li>
 							<li><a href="contact"><div>Contact</div></a></li>
 							<li><a href="about"><div>About</div></a></li>
