--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -103,7 +103,7 @@
 					<nav class="one-page-menu">
 						<ul>
 							<li><a href="dashboard"><div>DASHBOARD</div></a></li>
-							<li><a href="predictive"><div>FORECASTING</div></a></li>
+							<li><a href="forecasting"><div>FORECASTING</div></a></li>
 						</ul>
 					</nav>
 
