--- a/templates/analyticsSinglePage.html
+++ b/templates/analyticsSinglePage.html
@@ -102,8 +102,8 @@
 
 					<nav class="one-page-menu">
 						<ul>
-							<li><a href="dashboard"><div>DASHBOARD</div></a></li>
-							<li><a href="forecasting"><div>FORECASTING</div></a></li>
+							<li><a href="#" data href="section-dashboard"><div>DASHBOARD</div></a></li>
+							<li><a href="#" data href="section-forecasting"><div>FORECASTING</div></a></li>
 						</ul>
 					</nav>
 
@@ -122,11 +122,19 @@
 			<!--<div class="content-wrap">
 
 				<div class="container clearfix"> -->
-			
+
 			<div id="section-dashboard" class="page-section"></div>
 						
 			<div class="heading-block topmargin noborder">
 				<h2 class="center">DASHBOARD</h2>
+			</div>
+					
+				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
+			
+			<div id="section-forecast" class="page-section"></div>
+						
+			<div class="heading-block topmargin noborder">
+				<h2 class="center">FORECAST<h2>
 			</div>
 					
 				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
