Added submenu active button

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -102,7 +102,7 @@
 
 					<nav class="one-page-menu">
 						<ul>
-							<li><a href="dashboard"><div>DASHBOARD</div></a></li>
+							<li class="current"><a href="dashboard"><div>DASHBOARD</div></a></li>
 							<li><a href="forecasting"><div>FORECASTING</div></a></li>
 						</ul>
 					</nav>
