Added updated hrefs

--- a/templates/atest.html
+++ b/templates/atest.html
@@ -102,8 +102,8 @@
 
 					<nav class="one-page-menu">
 						<ul>
-							<li><a href="#" data href="#section-dashboard"><div>DASHBOARD</div></a></li>
-							<li><a href="#" data href="#section-forecasting"><div>FORECASTING</div></a></li>
+							<li><a href="#dashboard" data href="#section-dashboard"><div>DASHBOARD</div></a></li>
+							<li><a href="#forecasting" data href="#section-forecasting"><div>FORECASTING</div></a></li>
 						</ul>
 					</nav>
 
