Added a list button class

--- a/templates/atest.html
+++ b/templates/atest.html
@@ -102,6 +102,7 @@
 
 					<nav class="one-page-menu">
 						<ul>
+							<li class="button-in-menu"><a href="support"><div class="button  button-circle button-red button-border">Support</div></a></li>
 							<li><a href="#dashboard" data href="#section-dashboard"><div>DASHBOARD</div></a></li>
 							<li><a href="#forecasting" data href="#section-forecasting"><div>FORECASTING</div></a></li>
 						</ul>
