--- a/templates/atest2.html
+++ b/templates/atest2.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body class="stretched sticky-responsive-pagemenu">
+<body class="stretched">
 
 	<!-- Document Wrapper
 	============================================= -->
@@ -119,41 +119,29 @@
 		============================================= -->
 		<section id="content">
 
-			<div class="content-wrap"
+			<!--<div class="content-wrap">
 
-				<section id="section-dashboard" class="page-section">
-						
-					<div class="container clearfix">
+				<div class="container clearfix"> -->
 
-						<div class="heading-block center">
-				
-							<h2>DASHBOARD</h2>
-							
-							<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
-				
-						</div>
+			<div id="section-dashboard" class="page-section"></div>
 						
-					</div>
-						
-				</section>
-		
-				<section id="section-forecast" class="page-section">
-						
-					<div class="container clearfix">
-
-						<div class="heading-block center">
-				
-							<h2 class="center">FORECAST</h2>
-							
-							<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
-				
-						</div>
-						
-					</div>
-						
-				</section>
-
+			<div class="heading-block topmargin noborder">
+				<h2 class="center">DASHBOARD</h2>
 			</div>
+					
+				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
+			
+			<div id="section-forecast" class="page-section"></div>
+						
+			<div class="heading-block topmargin noborder">
+				<h2 class="center">FORECAST<h2>
+			</div>
+					
+				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau" width=1050 height=1400 style="text-align: center"></iframe></p>
+				
+				<!-- </div>
+
+			</div> -->
 
 		</section><!-- #content end -->
 
