--- a/templates/canvasGood1.html
+++ b/templates/canvasGood1.html
@@ -38,7 +38,7 @@
 
 		<!-- Header
 		============================================= -->
-		<header id="header" class="page-section split-menu">
+		<header id="header" class="page-section full-header">
 
 			<div id="header-wrap">
 
